Finished the alert module
Signed-off-by: Eliminioa <crazymadgenius@gmail.com>

--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,8 @@
 {
   "email": "periwnkleprime20@gmail.com",
   "reddit": "Periwinkle_Prime_2",
-  "password": "P3r1wink13"
+  "password": "P3r1wink13",
+  "enemy_sub": "orangered",
+  "alertThread": "206qef",
+  "generals": ["Sahdee","RockdaleRooster","NaughtyPenguin","Eliminioa"]
 }
